--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/SchedulerView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/SchedulerView.fxml
@@ -158,6 +158,7 @@
                             <TableColumn fx:id="eventNameCol" editable="false" prefWidth="130.0" text="Name" />
                             <TableColumn fx:id="eventSourceCol" editable="false" prefWidth="100.0" text="Source" />
                             <TableColumn fx:id="eventTriggerCol" editable="false" prefWidth="250.0" text="Trigger" />
+                            <TableColumn fx:id="eventEnabledCol" editable="false" prefWidth="80.0" text="Enabled" />
                             <TableColumn fx:id="eventResourcesCol" editable="false" prefWidth="100.0" text="Resources" />
                             <TableColumn fx:id="eventDurationCol" editable="false" prefWidth="100.0" text="Duration" />
                             <TableColumn fx:id="eventParentCol" editable="false" prefWidth="130.0" text="Parent" />
