--- a/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/SchedulerView.fxml
+++ b/eu.dariolucia.reatmetric.ui/src/main/resources/eu/dariolucia/reatmetric/ui/fxml/SchedulerView.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ContextMenu?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.ToggleButton?>
@@ -168,6 +167,30 @@
                                 <items>
                                     <MenuItem fx:id="eventEditScheduledMenuItem" mnemonicParsing="false" onAction="#onEventModifyMenuItem" text="Edit scheduled item..." />
                                     <MenuItem fx:id="eventDeleteScheduledMenuItem" mnemonicParsing="false" onAction="#onEventRemoveMenuItem" text="Remove scheduled items(s)" />
+                                </items>
+                            </ContextMenu>
+                        </contextMenu>
+                    </TableView>
+                </Tab>
+                <Tab text="Bots" closable="false">
+                    <graphic>
+                        <ImageView pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@/eu/dariolucia/reatmetric/ui/fxml/images/16px/android.svg.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                    <TableView fx:id="botDataItemTableView" fixedCellSize="20.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="1.0" onDragDropped="#onDragDropped" onDragEntered="#onDragEntered" onDragExited="#onDragExited" onDragOver="#onDragOver" VBox.vgrow="ALWAYS">
+                        <columns>
+                            <TableColumn fx:id="botNameCol" editable="false" prefWidth="130.0" text="Name" />
+                            <TableColumn fx:id="botStateCol" editable="false" prefWidth="100.0" text="State" />
+                            <TableColumn fx:id="botEnabledCol" editable="false" prefWidth="80.0" text="Enabled" />
+                        </columns>
+                        <contextMenu>
+                            <ContextMenu onShowing="#menuAboutToShow">
+                                <items>
+                                    <MenuItem fx:id="botEnableMenuItem" mnemonicParsing="false" onAction="#onBotEnableMenuItem" text="Enable" />
+                                    <MenuItem fx:id="botDisableMenuItem" mnemonicParsing="false" onAction="#onBotDisableMenuItem" text="Disable" />
                                 </items>
                             </ContextMenu>
                         </contextMenu>
